<resources>
    <string name="app_name">mibody</string>

    <!-- Strings related to login -->
    <string name="name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="prompt_password">Password</string>
    <string name="weight">Weight</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="btn_link_to_register">Not a member?...Sign up now!</string>
    <string name="btn_link_to_login">Already registered?...Login!</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_exists">This user is already exists!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_workout">Workout</string>
    <string name="none_paired">No Devices have been paired</string>


    <string name="title_activity_main">MiBody</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="facebook_app_id">401898353476575</string>
    <string name="fb_login_protocol_scheme">fb401898353476575</string>

    <!-- Material Calendar -->
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="calendar_previous">previous</string>
    <string name="calendar_next">next</string>
    <string name="saved_event_image">saved event image</string>

    <array name="genderArray">
        <item>Male</item>
        <item>Female</item>
    </array>

</resources>
