<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mibody.app.activity.Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/loginbg_blur"
        android:background="@color/black"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_up"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:rotation="-90"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_gravity="center"
            android:textColor="@color/MiBodyWhite"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>


    <Space
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/spaceForForm"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <!-- Login progress -->

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/registrationForm"
        android:layout_below="@id/spaceForForm"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Name"
                android:gravity="center"
                android:textColor="#fff"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/name"
                android:hint="@string/name"
                android:textColorHint="#7fffffff"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:background="@drawable/edittxt_bg"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:maxLines="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Email Address"
                android:gravity="center"
                android:textColor="#fff"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/email"
                android:hint="@string/prompt_email"
                android:textColorHint="#7fffffff"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:background="@drawable/edittxt_bg"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Mobile"
                android:gravity="center"
                android:textColor="#fff"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/mobile"
                android:hint="@string/mobile"
                android:textColorHint="#7fffffff"
                android:inputType="numberDecimal"
                android:textColor="#FFFFFF"
                android:background="@drawable/edittxt_bg"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Password"
                android:gravity="center"
                android:textColor="#fff"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/password"
                android:hint="@string/prompt_password"
                android:textColorHint="#7fffffff"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:background="@drawable/edittxt_bg"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:maxLines="1"/>

            <Button
                android:id="@+id/btnRegister"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:text="@string/action_register"
                android:background="@drawable/signinbtn"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:textAllCaps="false"
                android:text="@string/btn_link_to_login"
                android:background="@drawable/fbbtn"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/blackLayout"
        android:background="@color/black"
        android:visibility="gone"
        android:alpha="0.6">

    </FrameLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/userImage"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/pp_default"/>

        <android.support.v7.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="25dp"
            android:id="@+id/ppEditCV"
            app:cardBackgroundColor="@color/MiBodyOrange"
            android:layout_alignEnd="@id/userImage"
            android:layout_alignBottom="@id/userImage"
            android:layout_alignRight="@id/userImage">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleX="-1"
                android:src="@drawable/pen_icon"
                android:scaleType="fitCenter"/>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:id="@+id/userImageChooseLayout"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_below="@id/ppEditCV">

            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/triangle90"
                    android:scaleType="fitXY"
                    android:layout_weight="1"
                    android:scaleX="-1"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:layout_weight="1"
                    android:src="@drawable/triangle90"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:background="@drawable/details_shape_all">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/CaptureImage"
                    android:gravity="center"
                    android:text="Capture Photo"
                    android:layout_weight="1"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:alpha="0.4"
                    android:background="@color/black">

                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/SelectImage"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="Choose from Gallery"
                    android:layout_weight="1"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
